--- a/Dside.AspNetCore.Authentication.ApiKey/Dside.AspNetCore.Authentication.ApiKey/Dside.AspNetCore.Authentication.ApiKey.csproj
+++ b/Dside.AspNetCore.Authentication.ApiKey/Dside.AspNetCore.Authentication.ApiKey/Dside.AspNetCore.Authentication.ApiKey.csproj
@@ -6,13 +6,17 @@
     <Authors>Dima Y</Authors>
     <Company />
     <Product />
-    <Description>ApiKey Authentication Hendler for AspNet Core</Description>
+    <Description>ApiKey Authenication handler for AspNet Core</Description>
   </PropertyGroup>
   
   <PropertyGroup>
     <IncludeSymbols>true</IncludeSymbols>
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
     <RepositoryUrl>https://github.com/dsidedp/Dside.AspNetCore.Authentication.ApiKey.git</RepositoryUrl>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <AssemblyVersion>1.0.0.0</AssemblyVersion>
+    <FileVersion>1.0.0.0</FileVersion>
+    <Version>1.0.1</Version>
   </PropertyGroup>
   
   <ItemGroup>
