--- a/Dside.AspNetCore.Authentication.ApiKey/Dside.AspNetCore.Authentication.ApiKey/Dside.AspNetCore.Authentication.ApiKey.csproj
+++ b/Dside.AspNetCore.Authentication.ApiKey/Dside.AspNetCore.Authentication.ApiKey/Dside.AspNetCore.Authentication.ApiKey.csproj
@@ -16,7 +16,11 @@
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <AssemblyVersion>1.0.0.0</AssemblyVersion>
     <FileVersion>1.0.0.0</FileVersion>
-    <Version>1.0.1</Version>
+    <Version>1.0.2</Version>
+  </PropertyGroup>
+  
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DefineConstants>DEBUG;TRACE</DefineConstants>
   </PropertyGroup>
   
   <ItemGroup>
